Fixed search bar alignment

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -395,7 +395,7 @@ form.search-bar > .btn:hover {
     font-weight: 500;
   }
 }
-
+nav ul.navbar-right li.nb {border-left: none;}
 
 /*
 .search-box .input-group-btn > .btn {
